--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-gitlab==4.3.0
-litellm==1.14.0
-openai==1.5.0
+openai>=1.12.0
+httpx>=0.25.0
 tiktoken>=0.8.0
 python-multipart==0.0.6
 aiohttp==3.9.1
