--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ tiktoken>=0.8.0
 python-multipart==0.0.6
 aiohttp==3.9.1
 asyncio-throttle==1.0.2
-redis==5.0.1
-sqlalchemy==2.0.23
+# redis==5.0.1
+# sqlalchemy==2.0.23
 alembic==1.13.0
 python-dotenv==1.0.0
 jinja2==3.1.2
