--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pydantic-settings==2.1.0
 python-gitlab==4.3.0
 openai>=1.12.0
 httpx>=0.25.0
-tiktoken>=0.8.0
+# tiktoken>=0.8.0  # 已移除，使用简单估算替代
 python-multipart==0.0.6
 aiohttp==3.9.1
 asyncio-throttle==1.0.2
