--- a/.env.example
+++ b/.env.example
@@ -1,52 +1,157 @@
-# 环境配置示例文件
-# 复制为 .env 并填入真实值
+# GitLab Code Reviewer - 环境变量配置示例
+# 复制此文件为 .env 并填入实际值
 
-# AI模型配置
-OPENAI_API_KEY=sk-your-openai-api-key-here
-# OpenAI兼容服务的API基础URL（可选）
-# OPENAI_API_BASE=https://api.openai.com/v1
-# OPENAI_API_URL=https://api.openai.com/v1  # 别名支持，与OPENAI_API_BASE功能相同
+# ============================================================================
+# AI 模型配置 (必需)
+# ============================================================================
 
-# AI提供商配置（可选）
-# AI_PROVIDER=openai  # 支持: openai, azure, custom等
-# CUSTOM_LLM_PROVIDER=custom  # 自定义LLM提供商标识
+# OpenAI API Key (必需)
+OPENAI_API_KEY=sk-your-api-key-here
 
-# 模型配置
+# OpenAI API Base URL (可选，使用自定义端点时设置)
+OPENAI_API_BASE=https://api.openai.com/v1
+
+# 默认 AI 模型
 DEFAULT_AI_MODEL=gpt-4
+
+# 备用 AI 模型
 FALLBACK_AI_MODEL=gpt-3.5-turbo
 
-# 示例：使用其他OpenAI兼容服务
-# OPENAI_API_BASE=https://your-custom-openai-compatible-service.com/v1
-# OPENAI_API_KEY=your-custom-api-key
-# DEFAULT_AI_MODEL=gpt-4
-# FALLBACK_AI_MODEL=gpt-3.5-turbo
+# AI 提供商 (openai, azure, custom)
+AI_PROVIDER=openai
 
+
+# ============================================================================
+# Redis 配置 (必需)
+# ============================================================================
+
+# 方式1: 使用 Docker 中的 Redis (开发环境)
+# REDIS_URL=redis://localhost:6379/0
+
+# 方式2: 使用外部 Redis 哨兵 (生产环境推荐)
+# 格式: redis+sentinel://[password@]host1:port1[,host2:port2,...]/service_name/db
+REDIS_URL=redis+sentinel://localhost:26379,localhost:26380,localhost:26381/mymaster/0
+
+# Redis 哨兵带密码示例
+# REDIS_URL=redis+sentinel://:your_password@sentinel1:26379,sentinel2:26379,sentinel3:26379/mymaster/0
+
+# 任务过期时间（秒），默认 24 小时
+REDIS_TASK_TTL=86400
+
+
+# ============================================================================
+# 数据库配置 (可选)
+# ============================================================================
+
+# SQLite (开发环境)
+DATABASE_URL=sqlite:///./app.db
+
+# PostgreSQL (生产环境)
+# DATABASE_URL=postgresql://reviewer:password@localhost:5432/reviewer_db
+
+
+# ============================================================================
 # 服务配置
+# ============================================================================
+
+# 服务名称
 SERVICE_NAME=gitlab-code-reviewer
+
+# 服务版本
 SERVICE_VERSION=1.0.0
-LOG_LEVEL=INFO
+
+# 调试模式 (生产环境请设置为 false)
 DEBUG=false
 
-# 数据库配置 (可选，用于缓存)
-DATABASE_URL=sqlite:///./app.db
-REDIS_URL=redis://localhost:6379/0
+# 日志级别 (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
 
+
+# ============================================================================
+# GitLab 配置
+# ============================================================================
+
+# 默认 GitLab URL (可选，如果每次请求都提供则不需要)
+DEFAULT_GITLAB_URL=https://gitlab.com
+
+# 每次审查最大文件数
+MAX_FILES_PER_REVIEW=50
+
+# 每个文件最大行数
+MAX_FILE_LINES=1000
+
+
+# ============================================================================
 # 性能配置
-MAX_CONCURRENT_REVIEWS=10
-REVIEW_TIMEOUT_SECONDS=300
-TOKEN_CACHE_TTL=3600
+# ============================================================================
 
+# 最大并发审查数
+MAX_CONCURRENT_REVIEWS=10
+
+# 审查超时时间（秒）
+REVIEW_TIMEOUT_SECONDS=300
+
+# 是否启用逐文件审查
+ENABLE_PER_FILE_REVIEW=true
+
+# 最大并发文件审查数
+MAX_CONCURRENT_FILE_REVIEWS=5
+
+
+# ============================================================================
 # 安全配置
-API_KEY_HEADER=X-API-Key
-RATE_LIMIT_PER_MINUTE=60
+# ============================================================================
+
+# 允许的主机列表 (逗号分隔或 JSON 数组)
+# 示例1: ALLOWED_HOSTS=127.0.0.1,localhost,example.com
+# 示例2: ALLOWED_HOSTS=["127.0.0.1", "localhost", "example.com"]
+# 示例3: ALLOWED_HOSTS=* (允许所有，不推荐用于生产环境)
 ALLOWED_HOSTS=*
 
-# GitLab默认配置
-DEFAULT_GITLAB_URL=https://gitlab.com
-MAX_FILES_PER_REVIEW=50
+# API 限流 (每分钟请求数)
+RATE_LIMIT_PER_MINUTE=60
+
+
+# ============================================================================
+# 成本优化配置
+# ============================================================================
+
+# 启用成本优化
+ENABLE_COST_OPTIMIZATION=true
+
+# 每次审查最大成本（美元）
+MAX_COST_PER_REVIEW=0.50
+
+# 启用智能过滤（自动跳过非重要文件）
+SMART_FILTERING=true
+
+
+# ============================================================================
+# 高级配置 (通常不需要修改)
+# ============================================================================
+
+# OpenAI 单次请求最大 token 数
 MAX_TOKENS_PER_REQUEST=32000
 
-# 成本优化
-ENABLE_COST_OPTIMIZATION=true
-MAX_COST_PER_REVIEW=0.50
-SMART_FILTERING=true
+# Token 缓存 TTL（秒）
+TOKEN_CACHE_TTL=3600
+
+# 启用结构化输出
+ENABLE_STRUCTURED_OUTPUT=true
+FORCE_STRUCTURED_OUTPUT=true
+
+
+# ============================================================================
+# 示例配置场景
+# ============================================================================
+
+# 场景1: 本地开发（使用 Docker Redis）
+# REDIS_URL=redis://localhost:6379/0
+# DEBUG=true
+# LOG_LEVEL=DEBUG
+
+# 场景2: 生产环境（使用 Redis 哨兵）
+# REDIS_URL=redis+sentinel://:strong_password@sentinel1:26379,sentinel2:26379,sentinel3:26379/mymaster/0
+# DEBUG=false
+# LOG_LEVEL=INFO
+# ALLOWED_HOSTS=["api.example.com", "gitlab-reviewer.example.com"]
